NIFI-10765 - Using Paths.get instead of Path.of (to stay Java 8 compatible)